Implemented rolling stocks management use cases
